--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     ports:
       - "3307:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: Rmd1976
+      MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: apotek
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
